--- a/app/src/main/res/layout/activity_authenticate.xml
+++ b/app/src/main/res/layout/activity_authenticate.xml
@@ -8,10 +8,10 @@
 
     <EditText
         android:id="@+id/PhVerify"
-        android:layout_width="450dp"
+        android:layout_width="400dp"
         android:layout_height="70dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="416dp"
+        android:layout_marginTop="268dp"
         android:layout_marginEnd="101dp"
         android:background="@color/black"
         android:ems="10"
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="95dp"
         android:layout_marginEnd="96dp"
-        android:layout_marginBottom="148dp"
+        android:layout_marginBottom="320dp"
         android:text="Verify"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -53,28 +53,28 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="64dp"
-        android:text="1.A verification mail has been sent to your Email. Click on the link to verify"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Auth" />
-
-    <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="56dp"
-        android:text="2.An OTP has been sent to your mobile . Please enter the OTP."
+        android:layout_marginBottom="40dp"
+        android:text="An OTP has been sent to your mobile . Please enter the OTP."
         android:textColor="#000000"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/PhVerify"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="181dp"
+        android:layout_marginEnd="182dp"
+        android:layout_marginBottom="64dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
