--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/app_back"
+    android:background="@color/white"
     android:textAlignment="center"
     android:visibility="visible"
     tools:context=".register">
@@ -181,4 +181,22 @@
         app:layout_constraintBottom_toTopOf="@+id/Regbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/google_signIn"
+        android:layout_width="190dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="111dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="Google Sign In"
+        android:textColor="@color/white"
+        android:textColorHighlight="#FFFFFF"
+        android:textSize="18sp"
+        app:backgroundTint="?attr/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
