--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -19,7 +19,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:id="@+id/imageview"
         android:layout_marginTop="10sp"
         ></ImageView>
@@ -30,17 +30,40 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="50sp"
         android:layout_marginLeft="100sp"
-        android:layout_marginTop="20sp"
+        android:layout_marginTop="10sp"
         android:textSize="25sp"
         android:hint="Item Name"></TextView>
 
-    <TextView
-        android:id="@+id/quantext"
-        android:layout_width="200sp"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100sp"
-        android:textSize="25sp"
-        android:hint="Quantity"></TextView>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/plus"
+            android:layout_width="50sp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50sp"
+            android:text="+"></Button>
+
+        <TextView
+            android:id="@+id/quantext"
+            android:layout_width="200sp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10sp"
+            android:hint="Quantity"
+            android:textSize="25sp"></TextView>
+
+        <Button
+            android:id="@+id/minus"
+            android:layout_width="50sp"
+            android:layout_height="wrap_content"
+            android:text="-"></Button>
+
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/sharebtn"
