--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/alegreya_bold</item>
+        <item>@font/allan_bold</item>
+        <item>@font/allan_bold_1</item>
+        <item>@font/allan_bold_2</item>
     </array>
 </resources>
