--- a/app/src/main/res/layout/activity_groceries.xml
+++ b/app/src/main/res/layout/activity_groceries.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_back"
     tools:context=".Groceries">
 
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="500sp"
+        android:layout_height="500dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="77dp"
         app:layout_constraintBottom_toTopOf="@+id/btn"
@@ -23,9 +24,9 @@
         android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
+        android:layout_marginStart="153dp"
         android:layout_marginTop="77dp"
-        android:layout_marginEnd="178dp"
+        android:layout_marginEnd="154dp"
         android:layout_marginBottom="104dp"
         android:text="Add Item"
         app:layout_constraintBottom_toBottomOf="parent"
