--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -3,53 +3,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_back"
     android:orientation="vertical"
     tools:context=".item">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30sp"
-        android:paddingLeft="50sp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:paddingLeft="50dp"
         android:text="Create a new Item "
         android:textColor="@color/black"
-        android:textSize="30sp"></TextView>
+        android:textSize="30dp"></TextView>
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="10sp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/common_google_signin_btn_icon_dark"></ImageView>
 
     <EditText
         android:id="@+id/itemtext"
-        android:layout_width="200sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="50sp"
-        android:layout_marginLeft="100sp"
-        android:layout_marginTop="20sp"
+        android:layout_marginVertical="10dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"
         android:hint="Enter the Item"></EditText>
 
     <EditText
         android:id="@+id/quantext"
-        android:layout_width="200sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="100sp"
+        android:layout_marginLeft="100dp"
         android:hint="Quantity"></EditText>
 
     <Button
         android:id="@+id/addbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20sp"
-        android:layout_marginLeft="150sp"
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="20dp"
         android:text="Add"></Button>
 
     <Button
         android:id="@+id/Choose_image"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:layout_marginLeft="123dp"
         android:text="Choose Image" />
 
 
