--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_light"
+    android:background="@drawable/app_back"
     tools:context=".Login">
 
     <TextView
@@ -12,20 +12,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
+        android:layout_marginTop="152dp"
         android:layout_marginEnd="150dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginBottom="70dp"
         android:ems="10"
         android:fontFamily="@font/allan_bold_1"
         android:inputType="textPersonName"
         android:text="Login"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.372" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/Email"
@@ -50,6 +50,7 @@
         android:layout_width="347dp"
         android:layout_height="46dp"
         android:layout_marginStart="100dp"
+        android:layout_marginTop="43dp"
         android:layout_marginEnd="101dp"
         android:layout_marginBottom="318dp"
         android:background="@color/black"
@@ -61,15 +62,16 @@
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Email" />
 
     <Button
         android:id="@+id/Loginbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="153dp"
-        android:layout_marginEnd="170dp"
-        android:layout_marginBottom="27dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="36dp"
         android:text="Login"
         app:backgroundTint="#ED4E4E"
         app:layout_constraintBottom_toTopOf="@+id/Create"
@@ -85,7 +87,7 @@
         android:layout_marginBottom="160dp"
         android:text="New to the app? Register here"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
