--- a/app/src/main/res/layout/activity_profession.xml
+++ b/app/src/main/res/layout/activity_profession.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_light"
+    android:background="@drawable/app_back"
     android:orientation="vertical"
     tools:context=".Profession">
 
@@ -14,7 +14,7 @@
         android:fontFamily="@font/allan_bold"
         android:text="Choose your profession"
         android:textColor="@color/black"
-        android:textSize="40sp"></TextView>
+        android:textSize="40dp"></TextView>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="Home Maker"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
             <RadioButton
                 android:id="@+id/Wk"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="working professionals,"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
             <RadioButton
                 android:id="@+id/jk"
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="job-seekers"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
             <RadioButton
                 android:id="@+id/bc"
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:checked="false"
                 android:text="bachelor"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
 
         </RadioGroup>
     </LinearLayout>
@@ -66,10 +66,11 @@
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50sp"
+        android:layout_marginLeft="165dp"
+        android:layout_marginTop="50dp"
         android:text="Next"
 
-        ></Button>
+        app:backgroundTint="#FF0000"></Button>
 
 
 </LinearLayout>
