--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_light"
+    android:background="@drawable/app_back"
     android:textAlignment="center"
     android:visibility="visible"
     tools:context=".register">
@@ -22,7 +22,7 @@
         android:text="Welcome"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="36sp"
+        android:textSize="36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,15 +33,19 @@
         android:id="@+id/editTextTextPersonName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="102dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
+        android:layout_marginBottom="12dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Create new Account"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/google_signIn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
 
     <EditText
@@ -51,6 +55,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@color/black"
         android:ems="10"
         android:hint="Full Name"
@@ -58,6 +63,7 @@
         android:padding="10dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/google_signIn" />
@@ -141,7 +147,7 @@
         android:text="Already Registered? Login Here"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="12sp"
+        android:textSize="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
@@ -170,7 +176,7 @@
         android:layout_marginBottom="16dp"
         android:text="Please Verify your Email after you register."
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/Regbtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -187,7 +193,7 @@
         android:text="Google Sign In"
         android:textColor="@color/white"
         android:textColorHighlight="#FFFFFF"
-        android:textSize="18sp"
+        android:textSize="18dp"
         app:backgroundTint="?attr/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
