--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_back"
     android:orientation="vertical"
     tools:context=".Share">
 
@@ -10,29 +12,30 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50sp"
-        android:layout_marginTop="30sp"
-        android:paddingLeft="50sp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginTop="30dp"
+        android:paddingLeft="50dp"
         android:text="Item Details "
         android:textColor="@color/black"
-        android:textSize="30sp"></TextView>
+        android:textSize="30dp"></TextView>
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
         android:id="@+id/imageview"
-        android:layout_marginTop="10sp"
-        ></ImageView>
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"></ImageView>
 
     <TextView
         android:id="@+id/itemtext"
-        android:layout_width="200sp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="50sp"
-        android:layout_marginLeft="100sp"
-        android:layout_marginTop="10sp"
-        android:textSize="25sp"
-        android:hint="Item Name"></TextView>
+        android:layout_marginVertical="50dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="10dp"
+        android:hint="Item Name"
+        android:textColor="#000000"
+        android:textSize="25dp"></TextView>
 
 
     <LinearLayout
@@ -42,25 +45,28 @@
 
         <Button
             android:id="@+id/plus"
-            android:layout_width="50sp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50sp"
-            android:text="+"></Button>
+            android:layout_marginLeft="50dp"
+            android:text="+"
+            app:backgroundTint="#FF0000"></Button>
 
         <TextView
             android:id="@+id/quantext"
-            android:layout_width="200sp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="10sp"
+            android:layout_marginLeft="10dp"
             android:hint="Quantity"
-            android:textSize="25sp"></TextView>
+            android:textColor="#000000"
+            android:textSize="25dp"></TextView>
 
         <Button
             android:id="@+id/minus"
-            android:layout_width="50sp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:text="-"></Button>
+            android:text="-"
+            app:backgroundTint="#FF0000"></Button>
 
 
     </LinearLayout>
@@ -69,10 +75,10 @@
         android:id="@+id/sharebtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70sp"
-        android:layout_marginLeft="150sp"
-        android:text="Share"></Button>
-
+        android:layout_marginLeft="150dp"
+        android:layout_marginTop="70dp"
+        android:text="Share"
+        app:backgroundTint="#FB0000"></Button>
 
 
 </LinearLayout>
