--- a/app/src/main/res/layout/activity_to__do__category.xml
+++ b/app/src/main/res/layout/activity_to__do__category.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_orange_light"
     android:orientation="horizontal"
     tools:context=".To_Do_Category">
 
@@ -10,14 +11,18 @@
         android:id="@+id/remaname"
         android:layout_width="200sp"
         android:layout_height="40sp"
-        android:text="Remiander Name"></TextView>
+        android:text="Remiander Name"
+        android:textColor="@color/black"
+        android:textSize="20sp"></TextView>
 
     <TextView
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="40sp"
+        android:textColor="@color/black"
         android:layout_marginLeft="40sp"
         android:layout_marginRight="40sp"
-        android:text="Date"></TextView>
+        android:text="Date"
+        android:textSize="20sp"></TextView>
 
 </LinearLayout>
