--- a/app/src/main/res/layout/activity_to__do__list.xml
+++ b/app/src/main/res/layout/activity_to__do__list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_back"
     tools:context=".To_Do_List">
 
     <EditText
@@ -13,10 +14,12 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="192dp"
         android:layout_marginEnd="99dp"
+        android:layout_marginBottom="34dp"
         android:hint="Title"
         android:textColor="#000000"
         android:textColorHint="#000000"
-        android:textSize="24sp"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/Time"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,6 +29,8 @@
         android:id="@+id/Time"
         android:layout_width="133dp"
         android:layout_height="63dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="34dp"
         android:layout_marginEnd="96dp"
         android:layout_marginBottom="388dp"
         android:background="@android:drawable/editbox_background"
@@ -33,21 +38,26 @@
         android:drawablePadding="16dp"
         android:textColor="#000000"
         android:textColorHint="#000000"
-        android:textSize="24sp"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/Title" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="53dp"
-        android:layout_marginTop="134dp"
+        android:layout_marginTop="128dp"
         android:layout_marginEnd="238dp"
+        android:layout_marginBottom="21dp"
         android:text="Remainder:"
         android:textColor="#020000"
-        android:textSize="24sp"
+        android:textSize="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/Title"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,47 +66,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="59dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginEnd="2dp"
         android:layout_marginBottom="404dp"
         android:text="Enter Time:"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:layout_marginBottom="340dp"
-        android:text="Enter Date:"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/Date"
-        android:layout_width="129dp"
-        android:layout_height="41dp"
-        android:layout_marginEnd="99dp"
-        android:layout_marginBottom="331dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Select date"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/Time"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Title"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="127dp"
+        android:layout_marginTop="73dp"
         android:layout_marginEnd="128dp"
         android:layout_marginBottom="256dp"
         android:text="Add Remainder"
+        app:backgroundTint="#FF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
